# ESP-MoonLolita

./: README.md
code/esp-idf-project/: 16M_Flash.csv  CMakeLists.txt  README.md  sdkconfig
code/esp-idf-project/components/LolitaAppFrame/: lolita_app_frame.h
code/esp-idf-project/components/MoonLolita-BSP/: CMakeLists.txt  moon_lolita_board_v1_support.h
code/esp-idf-project/components/MoonLolita-BSP/device/adc_keyboard/: adc_keyboard.c  adc_keyboard.h
code/esp-idf-project/components/MoonLolita-BSP/device/aw9523b/: aw9523b.c  aw9523b.h
code/esp-idf-project/components/MoonLolita-BSP/device/led/: led.h
code/esp-idf-project/components/MoonLolita-BSP/device/lvgl_support/: gt911.c  gt911.h  lvgl_support.c  lvgl_support.h
code/esp-idf-project/components/MoonLolita-BSP/device/shtc3/: shtc3.c  shtc3.h
code/esp-idf-project/components/MoonLolita-BSP/peripheral/bsp_i2c/: bsp_i2c.c
code/esp-idf-project/components/MoonLolita-BSP/peripheral/bsp_i2s/: bsp_i2s.c  bsp_i2s.h
code/esp-idf-project/components/MoonLolita-BSP/peripheral/bsp_ledc/: bsp_ledc.c  bsp_ledc.h
code/esp-idf-project/components/MoonLolita-BSP/peripheral/bsp_nvs/: bsp_nvs.c  bsp_nvs.h
code/esp-idf-project/components/MoonLolita-BSP/peripheral/bsp_sdcard/: bsp_sdcard.c  bsp_sdcard.h
code/esp-idf-project/components/MoonLolita-BSP/peripheral/bsp_usb_cdc/: bsp_usb_cdc.c  bsp_usb_cdc.h
code/esp-idf-project/components/MoonLolita-BSP/peripheral/bsp_wifi/: bsp_wifi.c  bsp_wifi.h
code/esp-idf-project/components/MoonLolita-UI/: CMakeLists.txt  moon_lolita_ui.h
code/esp-idf-project/components/MoonLolita-UI/home_page/: home_page.c
code/esp-idf-project/components/MoonLolita-Ui/: moon_lolita_ui.h
code/esp-idf-project/components/MoonLolita-Ui/home_page/: home_page.c  home_page.h
code/esp-idf-project/components/ST7789/: CMakeLists.txt  ST7789.c  ST7789.h
code/esp-idf-project/components/lvgl/: CMakeLists.txt  esp.cmake  lv_conf.h
code/esp-idf-project/components/lvgl/src/: lv_conf_internal.h
code/esp-idf-project/components/net/: CMakeLists.txt
code/esp-idf-project/components/net/mqtt/: mqtt.c  mqtt.h
code/esp-idf-project/main/: CMakeLists.txt  log.c  log.h  main.c
code/esp-idf-project/main/board_support/: moon_lolita_board_v1_support.h
code/esp-idf-project/main/board_support/aw9523b/: aw9523b.c
code/esp-idf-project/main/board_support/bit_io/: bit_io.c  bit_io.h
code/esp-idf-project/main/board_support/device/adc_keyboard/: adc_keyboard.c  adc_keyboard.h
code/esp-idf-project/main/board_support/device/es8388/: es8388.c
code/esp-idf-project/main/board_support/device/lvgl_support/: lvgl_support.c
code/esp-idf-project/main/board_support/device/mpu6050/: mpu6050.c  mpu6050.h
code/esp-idf-project/main/board_support/device/shtc3/: shtc3.c  shtc3.h
code/esp-idf-project/main/board_support/es8388/: es8388.h
code/esp-idf-project/main/board_support/led/: led.h
code/esp-idf-project/main/board_support/lv_support/: lv_support.c  lv_support.h
code/esp-idf-project/main/board_support/peripheral/bsp_i2c/: bsp_i2c.c  bsp_i2c.h
code/esp-idf-project/main/lv_support/: lv_support.c  lv_support.h
pcb/: README.md
pcb/ESP32-MoonLolita-PCB/: ESP32-MoonLolita-PCB.json  ESP32-MoonLolita-PCBDoc.json  info
pdf/: README.md
