idf_component_register(SRC_DIRS     "."
                                    "board_support/aw9523b"
                                    "board_support/bit_io"
                                    "board_support/es8388"
                                    "board_support/led"
                                    "board_support/lv_support"
                                    "board_support/mpu6050"
                                    "board_support/shtc3"
                    INCLUDE_DIRS    "." 
                                    "board_support")